--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Leonardo Attizano</strong>, <br />
+								a Software Developer and this<br />
+								is my portifolio.</h2>
+								<p>I work as a backend Developer<br />
+								and bellow are some of the projects i worked on.</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Check it out!</a>
 							</footer>
 
 						</div>
