update on text and adition of projects

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Leonardo Attizano</h1>
-							<p>Java Jedi</p>
-						</div>
+							<p>Software Engineer</p>
+						</div> 	
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -41,9 +41,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#https://github.com/LeoAttizano" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#https://www.linkedin.com/in/leonardo-attizano/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/LeoAttizano" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/leonardo-attizano/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:leoattizano@hotmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -61,7 +61,7 @@
 								<h2 class="alt">Hi! I'm <strong>Leonardo Attizano</strong>, <br />
 								a Software Developer and this<br />
 								is my portifolio.</h2>
-								<p>I work as a backend Developer<br />
+								<p>I work as a Software Engineer<br />
 								and bellow are some of the projects i worked on.</p>
 							</header>
 
@@ -80,23 +80,21 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Here are some projects i worked on 
+								for both practice and fun.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/LeoAttizano/decisionTreeLOTR" class="image fit"><img src="images/LOTRC.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Lord of the Rings Classifier</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://github.com/LeoAttizano/BeatsCoin" class="image fit"><img src="images/blockchain.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>BeatsCoin - Blockchain Application</h3>
 										</header>
 									</article>
 								</div>
@@ -143,13 +141,11 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
-
+							<p>I'm from São Paulo Brazil, graduated in Business Administration 
+								by Universidade Presbiteriana Mackenzie, i have always been involved 
+								in the technology business workwise, even before i started working with 
+								Software development itself, by working the business and project management areas
+								before turning to the more technical roles.
 						</div>
 					</section>
 
@@ -161,23 +157,10 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
-
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
+							<p>In order to contact me feel free to send me an e-mail, 
+								check out my GitHub or looking me up on LinkedIn 
+								all the means of contact can be found in the bottom 
+								left corner of your screen.</p>
 
 						</div>
 					</section>
