update e inserção de projeto fibby

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://github.com/LeoAttizano/FibonacciComparison" class="image fit"><img src="images/fibby.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Fibonacci Recursive vs Dynamic Programming</h3>
 										</header>
 									</article>
 									<article class="item">
