--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://github.com/LeoAttizano/Snek" class="image fit"><img src="images/snek.jpg" alt="" /></a>
 										<header>
-											<h3>(Soon...)</h3>
+											<h3>Snek (Terminal Classic Snake Game)</h3>
 										</header>
 									</article>
 									<article class="item">
