correção de nome

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/LeoAttizano/Snek" class="image fit"><img src="images/snek.jpg" alt="" /></a>
+										<a href="https://github.com/LeoAttizano/Snek" class="image fit"><img src="images/snek.png" alt="" /></a>
 										<header>
 											<h3>Snek (Terminal Classic Snake Game)</h3>
 										</header>
